# osmand_map_creation

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: area-request.md  bug_report.md  feature_request.md
docs/: development.md  processing_script_usage.md  processing_script_usage.txt  state_processing_script_usage.md
osmand_map_creator/: batch.xml.template
osmand_osm/: __init__.py
osmand_osm/osm/: __init__.py  addr_oa.py  clean_db.py  clean_files.py  config.py  config.template  geofabrik_fix.py  oa.py  obf.py  osm_utils.py  processing.py  processing.sh  setup.sh  setup_app.sh  setup_container.sh  style.lua  tests.py  update_app.sh
osmand_osm/osm/aa/: aa.osm.pbf  filter-data-addresses-city.geojson  filter-data-addresses-city_addresses.osm  filter_data_addresses_city.sql  filter_data_addresses_city_temp.sql  load-oa-addresses-city_addresses.osm  load_oa_addresses_city.sql  merge-oa-addresses-city.geojson  merge_oa_addresses_city.sql  merge_oa_addresses_city_temp.sql  output-osm-addresses-city.geojson  output-osm-addresses-city_addresses.osm  output_osm_addresses_city.sql  providence-addresses-city.geojson  slice-addresses-city_addresses.osm
osmand_osm/osm/id/: addr_ada.py  addr_canyon.py  addr_kootenai.py  id_processing.py
osmand_osm/osm/or/: addr_deschutes.py  addr_jackson.py  addr_lane.py  addr_marion.py  or_processing.py
osmand_osm/osm/wa/: addr_clark.py  addr_cowlitz.py  addr_franklin.py  addr_grant.py  addr_island.py  addr_kennewick.py  addr_king.py  addr_kitsap.py  addr_pierce.py  addr_skagit.py  addr_snohomish.py  addr_spokane.py  addr_thurston.py  addr_whatcom.py  addr_yakima.py  osmand_data_cleaning.sql  tests.py  wa_processing.py
tests/: conftest.py  test_infrastructure.py
